OpenWPM/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LTRI
    NAMEDGROUP
    RTRI

Grammar

Rule 0     S' -> regex
Rule 1     regex -> outer_term
Rule 2     regex -> outer_term BAR regex
Rule 3     outer_term -> term
Rule 4     outer_term -> CARET term
Rule 5     outer_term -> term DOLLAR
Rule 6     outer_term -> CARET term DOLLAR
Rule 7     term -> factor
Rule 8     term -> factor term
Rule 9     factor -> NON_META_CHAR
Rule 10    factor -> DIGIT
Rule 11    factor -> DASH
Rule 12    factor -> COMMA
Rule 13    factor -> DOT
Rule 14    factor -> factor STAR
Rule 15    factor -> factor PLUS
Rule 16    factor -> factor QUESTION
Rule 17    factor -> LPAREN regex RPAREN
Rule 18    string -> NON_META_CHAR
Rule 19    string -> NON_META_CHAR string
Rule 20    factor -> BACKSLASH DIGIT
Rule 21    factor -> set
Rule 22    factor -> BACKSLASH DOT
Rule 23    factor -> BACKSLASH STAR
Rule 24    factor -> BACKSLASH PLUS
Rule 25    factor -> BACKSLASH QUESTION
Rule 26    factor -> BACKSLASH BAR
Rule 27    factor -> BACKSLASH LPAREN
Rule 28    factor -> BACKSLASH RPAREN
Rule 29    factor -> BACKSLASH LBRACKET
Rule 30    factor -> BACKSLASH RBRACKET
Rule 31    factor -> BACKSLASH CARET
Rule 32    factor -> BACKSLASH LBRACE
Rule 33    factor -> BACKSLASH RBRACE
Rule 34    factor -> BACKSLASH DASH
Rule 35    factor -> BACKSLASH COMMA
Rule 36    factor -> BACKSLASH BACKSLASH
Rule 37    factor -> BACKSLASH NON_META_CHAR
Rule 38    factor -> factor LBRACE number RBRACE
Rule 39    factor -> factor LBRACE number COMMA RBRACE
Rule 40    factor -> factor LBRACE number COMMA number RBRACE
Rule 41    number -> DIGIT
Rule 42    number -> DIGIT number
Rule 43    set -> LDASHBRACKET set_items_parent RBRACKET
Rule 44    set -> LBRACKET set_items_parent RDASHBRACKET
Rule 45    set -> LBRACKET set_items_parent RBRACKET
Rule 46    set_items_parent -> set_items
Rule 47    set -> LBRACKET CARET set_items_parent RBRACKET
Rule 48    set_items -> set_item
Rule 49    set_items -> set_item set_items
Rule 50    set_item -> set_non_meta_char
Rule 51    set_item -> set_non_meta_char DASH set_non_meta_char
Rule 52    set_item -> BACKSLASH RBRACKET
Rule 53    set_item -> BACKSLASH CARET
Rule 54    set_item -> BACKSLASH DASH
Rule 55    set_item -> BACKSLASH BACKSLASH
Rule 56    set_item -> BACKSLASH set_non_meta_char
Rule 57    set_non_meta_char -> NON_META_CHAR
Rule 58    set_non_meta_char -> LBRACKET
Rule 59    set_non_meta_char -> DIGIT
Rule 60    set_non_meta_char -> DOT
Rule 61    set_non_meta_char -> STAR
Rule 62    set_non_meta_char -> PLUS
Rule 63    set_non_meta_char -> QUESTION
Rule 64    set_non_meta_char -> BAR
Rule 65    set_non_meta_char -> LPAREN
Rule 66    set_non_meta_char -> RPAREN
Rule 67    set_non_meta_char -> LBRACE
Rule 68    set_non_meta_char -> RBRACE
Rule 69    set_non_meta_char -> COMMA
Rule 70    set_non_meta_char -> EQUAL

Terminals, with rules where they appear

BACKSLASH            : 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 36 37 52 53 54 55 55 56
BAR                  : 2 26 64
CARET                : 4 6 31 47 53
COMMA                : 12 35 39 40 69
DASH                 : 11 34 51 54
DIGIT                : 10 20 41 42 59
DOLLAR               : 5 6
DOT                  : 13 22 60
EQUAL                : 70
LBRACE               : 32 38 39 40 67
LBRACKET             : 29 44 45 47 58
LDASHBRACKET         : 43
LPAREN               : 17 27 65
LTRI                 : 
NAMEDGROUP           : 
NON_META_CHAR        : 9 18 19 37 57
PLUS                 : 15 24 62
QUESTION             : 16 25 63
RBRACE               : 33 38 39 40 68
RBRACKET             : 30 43 45 47 52
RDASHBRACKET         : 44
RPAREN               : 17 28 66
RTRI                 : 
STAR                 : 14 23 61
error                : 

Nonterminals, with rules where they appear

factor               : 7 8 14 15 16 38 39 40
number               : 38 39 40 40 42
outer_term           : 1 2
regex                : 2 17 0
set                  : 21
set_item             : 48 49
set_items            : 46 49
set_items_parent     : 43 44 45 47
set_non_meta_char    : 50 51 51 56
string               : 19
term                 : 3 4 5 6 8

Parsing method: LALR

state 0

    (0) S' -> . regex
    (1) regex -> . outer_term
    (2) regex -> . outer_term BAR regex
    (3) outer_term -> . term
    (4) outer_term -> . CARET term
    (5) outer_term -> . term DOLLAR
    (6) outer_term -> . CARET term DOLLAR
    (7) term -> . factor
    (8) term -> . factor term
    (9) factor -> . NON_META_CHAR
    (10) factor -> . DIGIT
    (11) factor -> . DASH
    (12) factor -> . COMMA
    (13) factor -> . DOT
    (14) factor -> . factor STAR
    (15) factor -> . factor PLUS
    (16) factor -> . factor QUESTION
    (17) factor -> . LPAREN regex RPAREN
    (20) factor -> . BACKSLASH DIGIT
    (21) factor -> . set
    (22) factor -> . BACKSLASH DOT
    (23) factor -> . BACKSLASH STAR
    (24) factor -> . BACKSLASH PLUS
    (25) factor -> . BACKSLASH QUESTION
    (26) factor -> . BACKSLASH BAR
    (27) factor -> . BACKSLASH LPAREN
    (28) factor -> . BACKSLASH RPAREN
    (29) factor -> . BACKSLASH LBRACKET
    (30) factor -> . BACKSLASH RBRACKET
    (31) factor -> . BACKSLASH CARET
    (32) factor -> . BACKSLASH LBRACE
    (33) factor -> . BACKSLASH RBRACE
    (34) factor -> . BACKSLASH DASH
    (35) factor -> . BACKSLASH COMMA
    (36) factor -> . BACKSLASH BACKSLASH
    (37) factor -> . BACKSLASH NON_META_CHAR
    (38) factor -> . factor LBRACE number RBRACE
    (39) factor -> . factor LBRACE number COMMA RBRACE
    (40) factor -> . factor LBRACE number COMMA number RBRACE
    (43) set -> . LDASHBRACKET set_items_parent RBRACKET
    (44) set -> . LBRACKET set_items_parent RDASHBRACKET
    (45) set -> . LBRACKET set_items_parent RBRACKET
    (47) set -> . LBRACKET CARET set_items_parent RBRACKET

    CARET           shift and go to state 4
    NON_META_CHAR   shift and go to state 6
    DIGIT           shift and go to state 7
    DASH            shift and go to state 8
    COMMA           shift and go to state 9
    DOT             shift and go to state 10
    LPAREN          shift and go to state 11
    BACKSLASH       shift and go to state 12
    LDASHBRACKET    shift and go to state 15
    LBRACKET        shift and go to state 14

    regex                          shift and go to state 1
    outer_term                     shift and go to state 2
    term                           shift and go to state 3
    factor                         shift and go to state 5
    set                            shift and go to state 13

state 1

    (0) S' -> regex .



state 2

    (1) regex -> outer_term .
    (2) regex -> outer_term . BAR regex

    $end            reduce using rule 1 (regex -> outer_term .)
    RPAREN          reduce using rule 1 (regex -> outer_term .)
    BAR             shift and go to state 16


state 3

    (3) outer_term -> term .
    (5) outer_term -> term . DOLLAR

    BAR             reduce using rule 3 (outer_term -> term .)
    $end            reduce using rule 3 (outer_term -> term .)
    RPAREN          reduce using rule 3 (outer_term -> term .)
    DOLLAR          shift and go to state 17


state 4

    (4) outer_term -> CARET . term
    (6) outer_term -> CARET . term DOLLAR
    (7) term -> . factor
    (8) term -> . factor term
    (9) factor -> . NON_META_CHAR
    (10) factor -> . DIGIT
    (11) factor -> . DASH
    (12) factor -> . COMMA
    (13) factor -> . DOT
    (14) factor -> . factor STAR
    (15) factor -> . factor PLUS
    (16) factor -> . factor QUESTION
    (17) factor -> . LPAREN regex RPAREN
    (20) factor -> . BACKSLASH DIGIT
    (21) factor -> . set
    (22) factor -> . BACKSLASH DOT
    (23) factor -> . BACKSLASH STAR
    (24) factor -> . BACKSLASH PLUS
    (25) factor -> . BACKSLASH QUESTION
    (26) factor -> . BACKSLASH BAR
    (27) factor -> . BACKSLASH LPAREN
    (28) factor -> . BACKSLASH RPAREN
    (29) factor -> . BACKSLASH LBRACKET
    (30) factor -> . BACKSLASH RBRACKET
    (31) factor -> . BACKSLASH CARET
    (32) factor -> . BACKSLASH LBRACE
    (33) factor -> . BACKSLASH RBRACE
    (34) factor -> . BACKSLASH DASH
    (35) factor -> . BACKSLASH COMMA
    (36) factor -> . BACKSLASH BACKSLASH
    (37) factor -> . BACKSLASH NON_META_CHAR
    (38) factor -> . factor LBRACE number RBRACE
    (39) factor -> . factor LBRACE number COMMA RBRACE
    (40) factor -> . factor LBRACE number COMMA number RBRACE
    (43) set -> . LDASHBRACKET set_items_parent RBRACKET
    (44) set -> . LBRACKET set_items_parent RDASHBRACKET
    (45) set -> . LBRACKET set_items_parent RBRACKET
    (47) set -> . LBRACKET CARET set_items_parent RBRACKET

    NON_META_CHAR   shift and go to state 6
    DIGIT           shift and go to state 7
    DASH            shift and go to state 8
    COMMA           shift and go to state 9
    DOT             shift and go to state 10
    LPAREN          shift and go to state 11
    BACKSLASH       shift and go to state 12
    LDASHBRACKET    shift and go to state 15
    LBRACKET        shift and go to state 14

    term                           shift and go to state 18
    factor                         shift and go to state 5
    set                            shift and go to state 13

state 5

    (7) term -> factor .
    (8) term -> factor . term
    (14) factor -> factor . STAR
    (15) factor -> factor . PLUS
    (16) factor -> factor . QUESTION
    (38) factor -> factor . LBRACE number RBRACE
    (39) factor -> factor . LBRACE number COMMA RBRACE
    (40) factor -> factor . LBRACE number COMMA number RBRACE
    (7) term -> . factor
    (8) term -> . factor term
    (9) factor -> . NON_META_CHAR
    (10) factor -> . DIGIT
    (11) factor -> . DASH
    (12) factor -> . COMMA
    (13) factor -> . DOT
    (14) factor -> . factor STAR
    (15) factor -> . factor PLUS
    (16) factor -> . factor QUESTION
    (17) factor -> . LPAREN regex RPAREN
    (20) factor -> . BACKSLASH DIGIT
    (21) factor -> . set
    (22) factor -> . BACKSLASH DOT
    (23) factor -> . BACKSLASH STAR
    (24) factor -> . BACKSLASH PLUS
    (25) factor -> . BACKSLASH QUESTION
    (26) factor -> . BACKSLASH BAR
    (27) factor -> . BACKSLASH LPAREN
    (28) factor -> . BACKSLASH RPAREN
    (29) factor -> . BACKSLASH LBRACKET
    (30) factor -> . BACKSLASH RBRACKET
    (31) factor -> . BACKSLASH CARET
    (32) factor -> . BACKSLASH LBRACE
    (33) factor -> . BACKSLASH RBRACE
    (34) factor -> . BACKSLASH DASH
    (35) factor -> . BACKSLASH COMMA
    (36) factor -> . BACKSLASH BACKSLASH
    (37) factor -> . BACKSLASH NON_META_CHAR
    (38) factor -> . factor LBRACE number RBRACE
    (39) factor -> . factor LBRACE number COMMA RBRACE
    (40) factor -> . factor LBRACE number COMMA number RBRACE
    (43) set -> . LDASHBRACKET set_items_parent RBRACKET
    (44) set -> . LBRACKET set_items_parent RDASHBRACKET
    (45) set -> . LBRACKET set_items_parent RBRACKET
    (47) set -> . LBRACKET CARET set_items_parent RBRACKET

    DOLLAR          reduce using rule 7 (term -> factor .)
    BAR             reduce using rule 7 (term -> factor .)
    $end            reduce using rule 7 (term -> factor .)
    RPAREN          reduce using rule 7 (term -> factor .)
    STAR            shift and go to state 20
    PLUS            shift and go to state 21
    QUESTION        shift and go to state 22
    LBRACE          shift and go to state 23
    NON_META_CHAR   shift and go to state 6
    DIGIT           shift and go to state 7
    DASH            shift and go to state 8
    COMMA           shift and go to state 9
    DOT             shift and go to state 10
    LPAREN          shift and go to state 11
    BACKSLASH       shift and go to state 12
    LDASHBRACKET    shift and go to state 15
    LBRACKET        shift and go to state 14

    factor                         shift and go to state 5
    term                           shift and go to state 19
    set                            shift and go to state 13

state 6

    (9) factor -> NON_META_CHAR .

    STAR            reduce using rule 9 (factor -> NON_META_CHAR .)
    PLUS            reduce using rule 9 (factor -> NON_META_CHAR .)
    QUESTION        reduce using rule 9 (factor -> NON_META_CHAR .)
    LBRACE          reduce using rule 9 (factor -> NON_META_CHAR .)
    NON_META_CHAR   reduce using rule 9 (factor -> NON_META_CHAR .)
    DIGIT           reduce using rule 9 (factor -> NON_META_CHAR .)
    DASH            reduce using rule 9 (factor -> NON_META_CHAR .)
    COMMA           reduce using rule 9 (factor -> NON_META_CHAR .)
    DOT             reduce using rule 9 (factor -> NON_META_CHAR .)
    LPAREN          reduce using rule 9 (factor -> NON_META_CHAR .)
    BACKSLASH       reduce using rule 9 (factor -> NON_META_CHAR .)
    LDASHBRACKET    reduce using rule 9 (factor -> NON_META_CHAR .)
    LBRACKET        reduce using rule 9 (factor -> NON_META_CHAR .)
    DOLLAR          reduce using rule 9 (factor -> NON_META_CHAR .)
    BAR             reduce using rule 9 (factor -> NON_META_CHAR .)
    $end            reduce using rule 9 (factor -> NON_META_CHAR .)
    RPAREN          reduce using rule 9 (factor -> NON_META_CHAR .)


state 7

    (10) factor -> DIGIT .

    STAR            reduce using rule 10 (factor -> DIGIT .)
    PLUS            reduce using rule 10 (factor -> DIGIT .)
    QUESTION        reduce using rule 10 (factor -> DIGIT .)
    LBRACE          reduce using rule 10 (factor -> DIGIT .)
    NON_META_CHAR   reduce using rule 10 (factor -> DIGIT .)
    DIGIT           reduce using rule 10 (factor -> DIGIT .)
    DASH            reduce using rule 10 (factor -> DIGIT .)
    COMMA           reduce using rule 10 (factor -> DIGIT .)
    DOT             reduce using rule 10 (factor -> DIGIT .)
    LPAREN          reduce using rule 10 (factor -> DIGIT .)
    BACKSLASH       reduce using rule 10 (factor -> DIGIT .)
    LDASHBRACKET    reduce using rule 10 (factor -> DIGIT .)
    LBRACKET        reduce using rule 10 (factor -> DIGIT .)
    DOLLAR          reduce using rule 10 (factor -> DIGIT .)
    BAR             reduce using rule 10 (factor -> DIGIT .)
    $end            reduce using rule 10 (factor -> DIGIT .)
    RPAREN          reduce using rule 10 (factor -> DIGIT .)


state 8

    (11) factor -> DASH .

    STAR            reduce using rule 11 (factor -> DASH .)
    PLUS            reduce using rule 11 (factor -> DASH .)
    QUESTION        reduce using rule 11 (factor -> DASH .)
    LBRACE          reduce using rule 11 (factor -> DASH .)
    NON_META_CHAR   reduce using rule 11 (factor -> DASH .)
    DIGIT           reduce using rule 11 (factor -> DASH .)
    DASH            reduce using rule 11 (factor -> DASH .)
    COMMA           reduce using rule 11 (factor -> DASH .)
    DOT             reduce using rule 11 (factor -> DASH .)
    LPAREN          reduce using rule 11 (factor -> DASH .)
    BACKSLASH       reduce using rule 11 (factor -> DASH .)
    LDASHBRACKET    reduce using rule 11 (factor -> DASH .)
    LBRACKET        reduce using rule 11 (factor -> DASH .)
    DOLLAR          reduce using rule 11 (factor -> DASH .)
    BAR             reduce using rule 11 (factor -> DASH .)
    $end            reduce using rule 11 (factor -> DASH .)
    RPAREN          reduce using rule 11 (factor -> DASH .)


state 9

    (12) factor -> COMMA .

    STAR            reduce using rule 12 (factor -> COMMA .)
    PLUS            reduce using rule 12 (factor -> COMMA .)
    QUESTION        reduce using rule 12 (factor -> COMMA .)
    LBRACE          reduce using rule 12 (factor -> COMMA .)
    NON_META_CHAR   reduce using rule 12 (factor -> COMMA .)
    DIGIT           reduce using rule 12 (factor -> COMMA .)
    DASH            reduce using rule 12 (factor -> COMMA .)
    COMMA           reduce using rule 12 (factor -> COMMA .)
    DOT             reduce using rule 12 (factor -> COMMA .)
    LPAREN          reduce using rule 12 (factor -> COMMA .)
    BACKSLASH       reduce using rule 12 (factor -> COMMA .)
    LDASHBRACKET    reduce using rule 12 (factor -> COMMA .)
    LBRACKET        reduce using rule 12 (factor -> COMMA .)
    DOLLAR          reduce using rule 12 (factor -> COMMA .)
    BAR             reduce using rule 12 (factor -> COMMA .)
    $end            reduce using rule 12 (factor -> COMMA .)
    RPAREN          reduce using rule 12 (factor -> COMMA .)


state 10

    (13) factor -> DOT .

    STAR            reduce using rule 13 (factor -> DOT .)
    PLUS            reduce using rule 13 (factor -> DOT .)
    QUESTION        reduce using rule 13 (factor -> DOT .)
    LBRACE          reduce using rule 13 (factor -> DOT .)
    NON_META_CHAR   reduce using rule 13 (factor -> DOT .)
    DIGIT           reduce using rule 13 (factor -> DOT .)
    DASH            reduce using rule 13 (factor -> DOT .)
    COMMA           reduce using rule 13 (factor -> DOT .)
    DOT             reduce using rule 13 (factor -> DOT .)
    LPAREN          reduce using rule 13 (factor -> DOT .)
    BACKSLASH       reduce using rule 13 (factor -> DOT .)
    LDASHBRACKET    reduce using rule 13 (factor -> DOT .)
    LBRACKET        reduce using rule 13 (factor -> DOT .)
    DOLLAR          reduce using rule 13 (factor -> DOT .)
    BAR             reduce using rule 13 (factor -> DOT .)
    $end            reduce using rule 13 (factor -> DOT .)
    RPAREN          reduce using rule 13 (factor -> DOT .)


state 11

    (17) factor -> LPAREN . regex RPAREN
    (1) regex -> . outer_term
    (2) regex -> . outer_term BAR regex
    (3) outer_term -> . term
    (4) outer_term -> . CARET term
    (5) outer_term -> . term DOLLAR
    (6) outer_term -> . CARET term DOLLAR
    (7) term -> . factor
    (8) term -> . factor term
    (9) factor -> . NON_META_CHAR
    (10) factor -> . DIGIT
    (11) factor -> . DASH
    (12) factor -> . COMMA
    (13) factor -> . DOT
    (14) factor -> . factor STAR
    (15) factor -> . factor PLUS
    (16) factor -> . factor QUESTION
    (17) factor -> . LPAREN regex RPAREN
    (20) factor -> . BACKSLASH DIGIT
    (21) factor -> . set
    (22) factor -> . BACKSLASH DOT
    (23) factor -> . BACKSLASH STAR
    (24) factor -> . BACKSLASH PLUS
    (25) factor -> . BACKSLASH QUESTION
    (26) factor -> . BACKSLASH BAR
    (27) factor -> . BACKSLASH LPAREN
    (28) factor -> . BACKSLASH RPAREN
    (29) factor -> . BACKSLASH LBRACKET
    (30) factor -> . BACKSLASH RBRACKET
    (31) factor -> . BACKSLASH CARET
    (32) factor -> . BACKSLASH LBRACE
    (33) factor -> . BACKSLASH RBRACE
    (34) factor -> . BACKSLASH DASH
    (35) factor -> . BACKSLASH COMMA
    (36) factor -> . BACKSLASH BACKSLASH
    (37) factor -> . BACKSLASH NON_META_CHAR
    (38) factor -> . factor LBRACE number RBRACE
    (39) factor -> . factor LBRACE number COMMA RBRACE
    (40) factor -> . factor LBRACE number COMMA number RBRACE
    (43) set -> . LDASHBRACKET set_items_parent RBRACKET
    (44) set -> . LBRACKET set_items_parent RDASHBRACKET
    (45) set -> . LBRACKET set_items_parent RBRACKET
    (47) set -> . LBRACKET CARET set_items_parent RBRACKET

    CARET           shift and go to state 4
    NON_META_CHAR   shift and go to state 6
    DIGIT           shift and go to state 7
    DASH            shift and go to state 8
    COMMA           shift and go to state 9
    DOT             shift and go to state 10
    LPAREN          shift and go to state 11
    BACKSLASH       shift and go to state 12
    LDASHBRACKET    shift and go to state 15
    LBRACKET        shift and go to state 14

    regex                          shift and go to state 24
    outer_term                     shift and go to state 2
    term                           shift and go to state 3
    factor                         shift and go to state 5
    set                            shift and go to state 13

state 12

    (20) factor -> BACKSLASH . DIGIT
    (22) factor -> BACKSLASH . DOT
    (23) factor -> BACKSLASH . STAR
    (24) factor -> BACKSLASH . PLUS
    (25) factor -> BACKSLASH . QUESTION
    (26) factor -> BACKSLASH . BAR
    (27) factor -> BACKSLASH . LPAREN
    (28) factor -> BACKSLASH . RPAREN
    (29) factor -> BACKSLASH . LBRACKET
    (30) factor -> BACKSLASH . RBRACKET
    (31) factor -> BACKSLASH . CARET
    (32) factor -> BACKSLASH . LBRACE
    (33) factor -> BACKSLASH . RBRACE
    (34) factor -> BACKSLASH . DASH
    (35) factor -> BACKSLASH . COMMA
    (36) factor -> BACKSLASH . BACKSLASH
    (37) factor -> BACKSLASH . NON_META_CHAR

    DIGIT           shift and go to state 26
    DOT             shift and go to state 27
    STAR            shift and go to state 28
    PLUS            shift and go to state 29
    QUESTION        shift and go to state 30
    BAR             shift and go to state 31
    LPAREN          shift and go to state 32
    RPAREN          shift and go to state 33
    LBRACKET        shift and go to state 34
    RBRACKET        shift and go to state 35
    CARET           shift and go to state 36
    LBRACE          shift and go to state 37
    RBRACE          shift and go to state 38
    DASH            shift and go to state 39
    COMMA           shift and go to state 40
    BACKSLASH       shift and go to state 25
    NON_META_CHAR   shift and go to state 41


state 13

    (21) factor -> set .

    STAR            reduce using rule 21 (factor -> set .)
    PLUS            reduce using rule 21 (factor -> set .)
    QUESTION        reduce using rule 21 (factor -> set .)
    LBRACE          reduce using rule 21 (factor -> set .)
    NON_META_CHAR   reduce using rule 21 (factor -> set .)
    DIGIT           reduce using rule 21 (factor -> set .)
    DASH            reduce using rule 21 (factor -> set .)
    COMMA           reduce using rule 21 (factor -> set .)
    DOT             reduce using rule 21 (factor -> set .)
    LPAREN          reduce using rule 21 (factor -> set .)
    BACKSLASH       reduce using rule 21 (factor -> set .)
    LDASHBRACKET    reduce using rule 21 (factor -> set .)
    LBRACKET        reduce using rule 21 (factor -> set .)
    DOLLAR          reduce using rule 21 (factor -> set .)
    BAR             reduce using rule 21 (factor -> set .)
    $end            reduce using rule 21 (factor -> set .)
    RPAREN          reduce using rule 21 (factor -> set .)


state 14
